--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<!-- font awesome icons-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body class="d-flex flex-column">
 	<!--display flex direction column-->
 	<header>
@@ -39,78 +40,80 @@
 				</div>
 			</nav>
 	</header>
-<div class="background">
+	<div class="background">
 
-</div>
-<div class="box-1">
-	<div class="home " id="home">
-		<div class="row">
-			<div class="col-6 d-flex flex-column justify-content-center d-flex pt-5 ps-4">
-				<!--col large 7 padding top 5 padding start 4-->
-				<div class="platform">
-					<p class="top-0 display-4">Platform to Regester your complaint</p>
-					<p style="font-size: 1.25rem;">Help us to solve problems in your locality by notifing us.</p>
+	</div>
+	<div class="home" id="home">
+		<div class="homearound d-flex justify-content-center mt-5">
+			<div class="row">
+				<div class="col-6 d-flex flex-column justify-content-center pt-5 ps-5">
+					<!--col large 7 padding top 5 padding start 4-->
+					<div class="platform">
+						<p class="top-0 display-4">e-Complaint Notifier of Dissatisfied Residents: A Effective Complaint
+							Registering Portal</p>
+						<p style="font-size: 1.25rem;">Help us to solve problems in your locality by notifing us.</p>
+					</div>
+					<div>
+						<button type="button" class="btn btn-primary">Sign In</button>
+						<!--success green, primary blue, dark black-->
+					</div>
 				</div>
-				<div>
-					<button type="button" class="btn btn-primary">Sign In</button>
-					<!--success green, primary blue, dark black-->
-				</div>
-			</div>
-	
-			<div id="carouselExampleDark" class="carousel carousel-dark slide col-5 d-flex flex-column justify-content-center" data-bs-ride="carousel">
-				<div class="carousel-indicators">
-		 			<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-		  			<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		 			 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				
-				<div class="carousel-inner" id="slider">
-		 			<div class="carousel-item active" data-bs-interval="10000">
-						<img src="drainage.png" class="d-block w-100" alt="..." style="height: 400px;">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>First slide label</h5>
-			 				<p>Some representative placeholder content for the first slide.</p>
+
+				<div id="carouselExampleDark"
+					class="carousel carousel-dark slide col-6 flex-column"
+					data-bs-ride="carousel">
+					<div class="carousel-indicators">
+						<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+							aria-current="true" aria-label="Slide 1"></button>
+						<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+							aria-label="Slide 2"></button>
+						<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+							aria-label="Slide 3"></button>
+					</div>
+
+					<div class="carousel-inner" id="slider">
+						<div class="carousel-item active" data-bs-interval="10000">
+							<img src="./static/drainage.png" class="d-block w-100" alt="..." style="height: 400px;">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
+						</div>
+
+						<div class="carousel-item" data-bs-interval="2000">
+							<img src="./static/garbage.png" class="d-block w-100" alt="..." style="height: 400px;">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
+						</div>
+
+						<div class="carousel-item">
+							<img src="/static/pothole.png" class="d-block w-100" alt="..." style="height: 400px;">
+							<div class="carousel-caption d-none d-md-block">
+							</div>
 						</div>
 					</div>
-				
-					<div class="carousel-item" data-bs-interval="2000">
-						<img src="drainage.png" class="d-block w-100" alt="..." style="height: 400px;">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Second slide label</h5>
-							<p>Some representative placeholder content for the second slide.</p>
-						</div>
-					 </div>
-		
-					 <div class="carousel-item">
-						<img src="pothole.png" class="d-block w-100" alt="..." style="height: 400px;">
-						<div class="carousel-caption d-none d-md-block">
-							<h5>Third slide label</h5>
-							<p>Some representative placeholder content for the third slide.</p>
-						</div>
-		  			</div>
+
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+						data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+						data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
-		
-			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-		    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    	<span class="visually-hidden">Previous</span>
-		    </button>
-		
-			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-		  		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		   		<span class="visually-hidden">Next</span>
-			</button>
-	    	</div>
+			</div>
 		</div>
 	</div>
-</div>		
 
-<section class="services p-5" id="services">
-	<!--services own class padding 5-->
-	<div class="container-fluid">
-		<header class="text-center p-4 mb-5">
+	<section class="services p-5" id="services">
+		<!--services own class padding 5-->
+		<div class="container-fluid">
+			<header class="text-center p-4 mb-5">
 				<!--padding 4 margin bottom 5-->
-			<h1 id="heading">Complaint</h1>
-		</header>
+				<h1 id="heading">Complaint</h1>
+			</header>
 
 			<div class="d-flex justify-content-around">
 				<div class="row">
@@ -170,7 +173,7 @@
 
 			<div class="row">
 				<div class="col-lg-6 d-flex p-5">
-					<img src="avtar.jpg" class="img-fluid">
+					<img src="/static/avtar.jpg" class="img-fluid">
 				</div>
 
 				<div class="col-lg-6 d-flex flex-column justify-content-center">
