--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!--display flex direction column-->
 	<header>
 		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+			<nav class="navbar navbar-expand-lg fixed-top" style="background-color: rgba(0, 0, 0, 0.500);">
 				<a class="navbar-brand ms-4" href="./index.html">Skyosys</a>
 				<button type="button" class="navbar-toggler me-3" data-bs-toggle="collapse"
 					data-bs-target="#navbarCollapse">
@@ -32,148 +32,48 @@
 					<div class="navbar-nav ms-auto">
 						<!--margin start auto-->
 						<a href="#home" id="link" class="nav-item nav-link active me-3">Home</a>
-						<a href="#services" id="link" class="nav-item nav-link me-3">Complaint</a>
 						<a href="#about" id="link" class="nav-item nav-link me-3">About</a>
+						<a href="#services" id="link" class="nav-item nav-link me-3">Services</a>
 						<a href="#contact" id="link" class="nav-item nav-link me-3">Contact</a>
 						</ul>
 					</div>
 				</div>
 			</nav>
 	</header>
-	<div class="background">
 
-	</div>
-	<div class="home" id="home">
-		<div class="homearound d-flex justify-content-center mt-5">
-			<div class="row">
-				<div class="col-6 d-flex flex-column justify-content-center pt-5 ps-5">
-					<!--col large 7 padding top 5 padding start 4-->
-					<div class="platform">
-						<p class="top-0 display-4">e-Complaint Notifier of Dissatisfied Residents: A Effective Complaint
-							Registering Portal</p>
-						<p style="font-size: 1.25rem;">Help us to solve problems in your locality by notifing us.</p>
-					</div>
-					<div>
-						<button type="button" class="btn btn-primary">Sign In</button>
-						<!--success green, primary blue, dark black-->
-					</div>
+	<div class="home p-5" id="home">
+		<div class="row">
+			<div class="col-lg-7 d-flex flex-column justify-content-center pt-5 ps-4">
+				<!--col large 7 padding top 5 padding start 4-->
+				<p class="fw-bolder display-4" style="color: white;">e-Complaint Notifier of Dissatisfied Residents</p>
+				<p style="font-size: 1.25rem; color: green;">A Effective Complaint Registering Portal : Be clean
+					and keep India clean
+				</p>
+
+				<div>
+					<button type="button" class="btn btn-primary">Get Started</button>
+					<!--success green, primary blue, dark black-->
 				</div>
-
-				<div id="carouselExampleDark"
-					class="carousel carousel-dark slide col-6 flex-column"
-					data-bs-ride="carousel">
-					<div class="carousel-indicators">
-						<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-							aria-current="true" aria-label="Slide 1"></button>
-						<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-							aria-label="Slide 2"></button>
-						<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-							aria-label="Slide 3"></button>
-					</div>
-
-					<div class="carousel-inner" id="slider">
-						<div class="carousel-item active" data-bs-interval="10000">
-							<img src="./static/drainage.png" class="d-block w-100" alt="..." style="height: 400px;">
-							<div class="carousel-caption d-none d-md-block">
-							</div>
-						</div>
-
-						<div class="carousel-item" data-bs-interval="2000">
-							<img src="./static/garbage.png" class="d-block w-100" alt="..." style="height: 400px;">
-							<div class="carousel-caption d-none d-md-block">
-							</div>
-						</div>
-
-						<div class="carousel-item">
-							<img src="/static/pothole.png" class="d-block w-100" alt="..." style="height: 400px;">
-							<div class="carousel-caption d-none d-md-block">
-							</div>
-						</div>
-					</div>
-
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-						data-bs-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Previous</span>
-					</button>
-
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-						data-bs-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Next</span>
-					</button>
-				</div>
+			</div>
+			<div class="col-lg-5 pt-5 text-center">
+				<!--col large 5 padding 5-->
+				<img src="./img1.png" class="img-fluid">
+				<!--img fluid for responsive-->
 			</div>
 		</div>
 	</div>
-
-	<section class="services p-5" id="services">
-		<!--services own class padding 5-->
-		<div class="container-fluid">
-			<header class="text-center p-4 mb-5">
-				<!--padding 4 margin bottom 5-->
-				<h1 id="heading">Complaint</h1>
-			</header>
-
-			<div class="d-flex justify-content-around">
-				<div class="row">
-					<div class="col-lg-4 pb-4">
-						<!--padding bottom 4 -->
-						<div class="card mx-3">
-							<!--card effect margin start-end 3-->
-							<div class="card-body pb-5">
-								<!--card body contents-->
-								<h4 class="card-title">
-									<!--title of card-->
-									<i class="fa fa-desktop pb-4 fa-2x"></i>
-									<!--font awesome icon fa-2x icon size-->
-									<br>Web<br>Development
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 pb-4">
-						<div class="card mx-3">
-							<div class="card-body pb-5">
-								<h4 class="card-title">
-									<i class="fa fa-mobile pb-4 fa-2x"></i><br>Mobile App<br>Development
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4 pb-4">
-						<div class="card mx-3">
-							<div class="card-body pb-5">
-								<h4 class="card-title">
-									<i class="fa fa-paint-brush pb-4 fa-2x"></i><br>Graphic<br> Designing
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-	</section>
 
 	<section id="about" class="about p-5">
 		<!--about own class padding 5-->
 		<div class="container-fluid">
 			<header class="mt-1 mb-4">
 				<!--margin top 1 margin bottom 4-->
-				<h1 id="heading">ABOUT US</h1>
+				<h1 id="heading" style="color: black;">ABOUT US</h1>
 			</header>
 
 			<div class="row">
 				<div class="col-lg-6 d-flex p-5">
-					<img src="/static/avtar.jpg" class="img-fluid">
+					<img src="avtar.jpg" class="img-fluid">
 				</div>
 
 				<div class="col-lg-6 d-flex flex-column justify-content-center">
@@ -204,6 +104,100 @@
 				</div>
 			</div>
 		</div>
+	</section>
+
+	<section class="services p-5" id="services">
+		<!--services own class padding 5-->
+		<div class="container-fluid">
+			<header class="text-center p-4 mb-5">
+				<!--padding 4 margin bottom 5-->
+				<h1 id="heading" style="color: white;">COMPLAINT</h1>
+			</header>
+
+			<div class="d-flex justify-content-around">
+				<div class="row">
+					<div class="col-lg-4 pb-4">
+						<!--padding bottom 4 -->
+						<div class="card mx-3">
+							<!--card effect margin start-end 3-->
+							<div class="card-body pb-5">
+								<!--card body contents-->
+								<center>
+									<h3 class="card-title">
+										<!--title of card-->
+										<!-- <i class="fa fa-desktop pb-4 fa-2x"></i> -->
+										<!--font awesome icon fa-2x icon size-->
+										<img src="./static/drainage.png" alt="" height="230" width="250">
+
+										<br>Drainage
+									</h3>
+									<a href="#" class="text-decoration-none">→ Click Here</a>
+								</center>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 pb-4">
+						<div class="card mx-3">
+							<div class="card-body pb-5">
+								<h4 class="card-title">
+									<i class="fa fa-mobile pb-4 fa-2x"></i><br>Mobile App<br>Development
+								</h4>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
+									metus a felis sagittis ornare.</p><br>
+								<a href="#" class="text-decoration-none">→ Learn More</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 pb-4">
+						<div class="card mx-3">
+							<div class="card-body pb-5">
+								<h4 class="card-title">
+									<i class="fa fa-paint-brush pb-4 fa-2x"></i><br>Graphic<br> Designing
+								</h4>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
+									metus a felis sagittis ornare.</p><br>
+								<a href="#" class="text-decoration-none">→ Learn More</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 pb-4">
+						<!--padding bottom 4 -->
+						<div class="card mx-3">
+							<!--card effect margin start-end 3-->
+							<div class="card-body pb-5">
+								<!--card body contents-->
+								<h4 class="card-title">
+									<!--title of card-->
+									<i class="fa fa-desktop pb-4 fa-2x"></i>
+									<!--font awesome icon fa-2x icon size-->
+									<br>Web<br>Development
+								</h4>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
+									metus a felis sagittis ornare.</p><br>
+								<a href="#" class="text-decoration-none">→ Learn More</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 pb-4">
+						<!--padding bottom 4 -->
+						<div class="card mx-3">
+							<!--card effect margin start-end 3-->
+							<div class="card-body pb-5">
+								<!--card body contents-->
+								<h4 class="card-title">
+									<!--title of card-->
+									<i class="fa fa-desktop pb-4 fa-2x"></i>
+									<!--font awesome icon fa-2x icon size-->
+									<br>Web<br>Development
+								</h4>
+								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
+									metus a felis sagittis ornare.</p><br>
+								<a href="#" class="text-decoration-none">→ Learn More</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 	</section>
 
 	<div id="contact" class="contact p-3">
