--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 	<!--display flex direction column-->
 	<header>
 		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg fixed-top" style="background-color: rgba(0, 0, 0, 0.500);">
-				<a class="navbar-brand ms-4" href="./index.html">Skyosys</a>
+			<nav class="navbar navbar-expand-lg fixed-top py-0" style="background-color: rgba(0, 0, 0, 0.500);">
+				<a class="navbar-brand ms-4" href="./index.html">e<span style="font-size: medium;">-</span>Clean
+					India</a>
 				<button type="button" class="navbar-toggler me-3" data-bs-toggle="collapse"
 					data-bs-target="#navbarCollapse">
 					<span class="navbar-toggler-icon"></span>
@@ -33,8 +34,8 @@
 						<!--margin start auto-->
 						<a href="#home" id="link" class="nav-item nav-link active me-3">Home</a>
 						<a href="#about" id="link" class="nav-item nav-link me-3">About</a>
-						<a href="#services" id="link" class="nav-item nav-link me-3">Services</a>
-						<a href="#contact" id="link" class="nav-item nav-link me-3">Contact</a>
+						<a href="#services" id="link" class="nav-item nav-link me-3">Complaint</a>
+						<a href="#contact" id="link" class="nav-item nav-link me-3">Contact Us</a>
 						</ul>
 					</div>
 				</div>
@@ -45,8 +46,9 @@
 		<div class="row">
 			<div class="col-lg-7 d-flex flex-column justify-content-center pt-5 ps-4">
 				<!--col large 7 padding top 5 padding start 4-->
-				<p class="fw-bolder display-4" style="color: white;">e-Complaint Notifier of Dissatisfied Residents</p>
-				<p style="font-size: 1.25rem; color: green;">A Effective Complaint Registering Portal : Be clean
+				<p class="fw-bolder display-4" style="color:white;">e-Complaint Notifier of Dissatisfied Residents</p>
+				<p style="font-size: 1.25rem; color:rgb(132, 255, 132);">A Effective Complaint Registering Portal : Be
+					clean
 					and keep India clean
 				</p>
 
@@ -57,7 +59,8 @@
 			</div>
 			<div class="col-lg-5 pt-5 text-center">
 				<!--col large 5 padding 5-->
-				<img src="./img1.png" class="img-fluid">
+				<img src="./static/sawachh-bharat-is-hindi-meaning-clean-india-vector-31815320.jpeg"
+					class="img-fluid rounded-circle">
 				<!--img fluid for responsive-->
 			</div>
 		</div>
@@ -68,12 +71,12 @@
 		<div class="container-fluid">
 			<header class="mt-1 mb-4">
 				<!--margin top 1 margin bottom 4-->
-				<h1 id="heading" style="color: black;">ABOUT US</h1>
+				<h1 id="heading" style="color:black;">ABOUT US</h1>
 			</header>
 
 			<div class="row">
 				<div class="col-lg-6 d-flex p-5">
-					<img src="avtar.jpg" class="img-fluid">
+					<img src="/static/avtar.jpg" class="img-fluid">
 				</div>
 
 				<div class="col-lg-6 d-flex flex-column justify-content-center">
@@ -111,88 +114,68 @@
 		<div class="container-fluid">
 			<header class="text-center p-4 mb-5">
 				<!--padding 4 margin bottom 5-->
-				<h1 id="heading" style="color: white;">COMPLAINT</h1>
+				<h1 id="heading" style="color:white;">COMPLAINT</h1>
 			</header>
 
 			<div class="d-flex justify-content-around">
 				<div class="row">
 					<div class="col-lg-4 pb-4">
-						<!--padding bottom 4 -->
 						<div class="card mx-3">
-							<!--card effect margin start-end 3-->
-							<div class="card-body pb-5">
-								<!--card body contents-->
-								<center>
-									<h3 class="card-title">
-										<!--title of card-->
-										<!-- <i class="fa fa-desktop pb-4 fa-2x"></i> -->
-										<!--font awesome icon fa-2x icon size-->
-										<img src="./static/drainage.png" alt="" height="230" width="250">
+							<div class="card-body pb-5" style="text-align: center;">
+								<h3 class="card-title">
+									<img src="./static/drainage.png" alt="" height="230" width="250">
 
-										<br>Drainage
-									</h3>
-									<a href="#" class="text-decoration-none">→ Click Here</a>
-								</center>
+									<br>Drainage
+								</h3>
+								<a href="#" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 pb-4">
 						<div class="card mx-3">
-							<div class="card-body pb-5">
-								<h4 class="card-title">
-									<i class="fa fa-mobile pb-4 fa-2x"></i><br>Mobile App<br>Development
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
+							<div class="card-body pb-5" style="text-align: center;">
+								<h3 class="card-title">
+									<img src="./static/garbage3d.webp" alt="" height="230" width="250">
+
+									<br>Garbage
+								</h3>
+								<a href="#" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 pb-4">
 						<div class="card mx-3">
-							<div class="card-body pb-5">
-								<h4 class="card-title">
-									<i class="fa fa-paint-brush pb-4 fa-2x"></i><br>Graphic<br> Designing
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
+							<div class="card-body pb-5" style="text-align: center;">
+								<h3 class="card-title">
+									<img src="./static/pothole.png" alt="" height="230" width="250">
+
+									<br>Pothole
+								</h3>
+								<a href="#" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 pb-4">
-						<!--padding bottom 4 -->
 						<div class="card mx-3">
-							<!--card effect margin start-end 3-->
-							<div class="card-body pb-5">
-								<!--card body contents-->
-								<h4 class="card-title">
-									<!--title of card-->
-									<i class="fa fa-desktop pb-4 fa-2x"></i>
-									<!--font awesome icon fa-2x icon size-->
-									<br>Web<br>Development
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
+							<div class="card-body pb-5" style="text-align: center;">
+								<h3 class="card-title">
+									<img src="./static/street light1.jpeg" alt="" height="230" width="250">
+
+									<br>Street Lights
+								</h3>
+								<a href="#" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 pb-4">
-						<!--padding bottom 4 -->
 						<div class="card mx-3">
-							<!--card effect margin start-end 3-->
-							<div class="card-body pb-5">
-								<!--card body contents-->
-								<h4 class="card-title">
-									<!--title of card-->
-									<i class="fa fa-desktop pb-4 fa-2x"></i>
-									<!--font awesome icon fa-2x icon size-->
-									<br>Web<br>Development
-								</h4>
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.Ut mollis
-									metus a felis sagittis ornare.</p><br>
-								<a href="#" class="text-decoration-none">→ Learn More</a>
+							<div class="card-body pb-5" style="text-align: center;">
+								<h3 class="card-title">
+									<img src="./static/Public toilets.png" alt="" height="230" width="250">
+
+									<br>Public Toilets
+								</h3>
+								<a href="#" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
@@ -260,19 +243,19 @@
 		</div>
 
 		<div style="margin: -16px;">
-			<footer class="text-white mt-4" style="background-color: #141414;">
+			<footer class="text-white mt-4" style="background-color:#141414;">
 				<div class="p-5">
 					<!--text color white padding 5-->
 					<div class="row">
 						<div class="col-md-3">
-							<h4 class="skyosys">Skyosys</h4>
+							<h3 class="skyosys">e<span style="font-size: medium;">-</span>Clean India</h3>
 							<!--skyosys own class-->
 							<p>Abhudaya Bank,<br>Airoli,<br>Sector-17.</p>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
 						<!--width 100 effect in mobile view only-->
 						<div class="col-md-3">
-							<h5>Useful Links</h5>
+							<h4>Useful Links</h4>
 							<p><a href="#home" class="text-white text-decoration-none">Home</a>
 							</p>
 							<p><a href="#about" class="text-white text-decoration-none">About</a>
@@ -283,38 +266,38 @@
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
 						<div class="col-md-3">
-							<h5>Services</h5>
+							<h4>Services</h4>
 							<p><a href="#" class="text-white text-decoration-none">Web Development</a></p>
-							<p><a href="#" class="text-white text-decoration-none">Mobile App<br>Development</a></p>
+							<p><a href="#" class="text-white text-decoration-none">Mobile App Development</a></p>
 							<p><a href="#" class="text-white text-decoration-none">Graphic Designing</a></p>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
-						<div class="col-md-3">
-							<h5>Contact Us</h5>
-							<p class="text-white">Email: info@skyosys.com</p>
-							<p class="text-white">Contact: 998756874</p>
+						<div class="col-md-3 text-white">
+							<h4>Contact Us</h4>
+							<p>Email: info@ecleanindia.com</p>
+							<p>Contact: 7038671199</p>
 						</div>
 					</div>
 				</div>
 
-				<hr style="color: white; height: 2px;">
+				<hr style="color:white; height: 2px;">
 
 				<div class="pt-2">
 					<!--padding top 2-->
 					<div class="d-flex">
 						<div class="col-xs-7">
-							<p class="ms-5">© CopyRight Skyosys. All Rights Reserved.</p>
+							<p class="ms-5">© CopyRight e-Clean India. All Rights Reserved.</p>
 						</div>
 						<div class="col-xs-5 ms-auto mb-3 me-5">
 							<a href="#" class="h2 m-2"><span class="fa fa-whatsapp"
-									style="font-size: 2rem; color: lightgreen;">
+									style="font-size: 2rem; color:lightgreen;">
 									<!--heading h2 margin 2-->
 								</span></a>
 							<a href="#" class="h2 m-2"><span class="fa fa-facebook"
-									style="font-size: 2rem; color: #4267B2;">
+									style="font-size: 2rem; color:#4267B2;">
 								</span></a>
 							<a href="#" class="h2 m-2"><span class="fa fa-twitter"
-									style="font-size: 2rem; color: #1DA1F2;">
+									style="font-size: 2rem; color:#1DA1F2;">
 								</span></a>
 						</div>
 					</div>
