--- a/index.html
+++ b/index.html
@@ -121,13 +121,16 @@
 				<div class="row">
 					<div class="col-lg-4 pb-4">
 						<div class="card mx-3">
-							<div class="card-body pb-5" style="text-align: center;">
+							<div class="card-body pb-5 text-center">
 								<h3 class="card-title">
 									<img src="./static/drainage.png" alt="" height="230" width="250">
 
 									<br>Drainage
 								</h3>
-								<a href="#" class="text-decoration-none">→ Click Here</a>
+							</div>
+
+							<div class="card-footer text-muted text-center">
+								<a href="" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
@@ -139,7 +142,10 @@
 
 									<br>Garbage
 								</h3>
-								<a href="#" class="text-decoration-none">→ Click Here</a>
+							</div>
+
+							<div class="card-footer text-muted text-center">
+								<a href="" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
@@ -151,7 +157,10 @@
 
 									<br>Pothole
 								</h3>
-								<a href="#" class="text-decoration-none">→ Click Here</a>
+							</div>
+
+							<div class="card-footer text-muted text-center">
+								<a href="" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
@@ -161,9 +170,12 @@
 								<h3 class="card-title">
 									<img src="./static/street light1.jpeg" alt="" height="230" width="250">
 
-									<br>Street Lights
+									<br>Street Light
 								</h3>
-								<a href="#" class="text-decoration-none">→ Click Here</a>
+							</div>
+
+							<div class="card-footer text-muted text-center">
+								<a href="" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
@@ -173,9 +185,12 @@
 								<h3 class="card-title">
 									<img src="./static/Public toilets.png" alt="" height="230" width="250">
 
-									<br>Public Toilets
+									<br>Public Toilet
 								</h3>
-								<a href="#" class="text-decoration-none">→ Click Here</a>
+							</div>
+
+							<div class="card-footer text-muted text-center">
+								<a href="" class="text-decoration-none">→ Click Here</a>
 							</div>
 						</div>
 					</div>
@@ -250,32 +265,37 @@
 						<div class="col-md-3">
 							<h3 class="skyosys">e<span style="font-size: medium;">-</span>Clean India</h3>
 							<!--skyosys own class-->
-							<p>Abhudaya Bank,<br>Airoli,<br>Sector-17.</p>
+							<p style="opacity: 0.6;">Abhudaya Bank,<br>Airoli,<br>Sector-17.</p>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
 						<!--width 100 effect in mobile view only-->
 						<div class="col-md-3">
-							<h4>Useful Links</h4>
-							<p><a href="#home" class="text-white text-decoration-none">Home</a>
-							</p>
-							<p><a href="#about" class="text-white text-decoration-none">About</a>
-							</p>
-							<p><a href="#services" class="text-white text-decoration-none">Services</a></p>
-							<p><a href="#contact" class="text-white text-decoration-none">Contact
-								</a></p>
+							<h4 style="opacity: 0.8;">Useful Links</h4>
+							<div style="opacity: 0.6;">
+								<p><a href="#home" class="text-white text-decoration-none">Home</a></p>
+								<p><a href="#about" class="text-white text-decoration-none">About</a></p>
+								<p><a href="#services" class="text-white text-decoration-none">Complaint</a></p>
+								<p><a href="#contact" class="text-white text-decoration-none">Contact Us</a></p>
+							</div>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
 						<div class="col-md-3">
-							<h4>Services</h4>
-							<p><a href="#" class="text-white text-decoration-none">Web Development</a></p>
-							<p><a href="#" class="text-white text-decoration-none">Mobile App Development</a></p>
-							<p><a href="#" class="text-white text-decoration-none">Graphic Designing</a></p>
+							<h4 style="opacity: 0.8;">Complaint</h4>
+							<div style="opacity: 0.6;">
+								<p><a href="#" class="text-white text-decoration-none">Drainage</a></p>
+								<p><a href="#" class="text-white text-decoration-none">Garbage</a></p>
+								<p><a href="#" class="text-white text-decoration-none">Pothole</a></p>
+								<p><a href="#" class="text-white text-decoration-none">Street Light</a></p>
+								<p><a href="#" class="text-white text-decoration-none">Public Toilet</a></p>
+							</div>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
 						<div class="col-md-3 text-white">
-							<h4>Contact Us</h4>
-							<p>Email: info@ecleanindia.com</p>
-							<p>Contact: 7038671199</p>
+							<h4 style="opacity: 0.8;">Contact Us</h4>
+							<div style="opacity: 0.6;">
+								<p>Email: info@ecleanindia.com</p>
+								<p>Contact: 7038671199</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -285,12 +305,12 @@
 				<div class="pt-2">
 					<!--padding top 2-->
 					<div class="d-flex">
-						<div class="col-xs-7">
+						<div class="col-xs-7" style="opacity: 0.8;">
 							<p class="ms-5">© CopyRight e-Clean India. All Rights Reserved.</p>
 						</div>
 						<div class="col-xs-5 ms-auto mb-3 me-5">
-							<a href="#" class="h2 m-2"><span class="fa fa-whatsapp"
-									style="font-size: 2rem; color:lightgreen;">
+							<a href="https://wa.me/917038671199" target="_blank" class="h2 m-2"><span
+									class="fa fa-whatsapp" style="font-size: 2rem; color:lightgreen;">
 									<!--heading h2 margin 2-->
 								</span></a>
 							<a href="#" class="h2 m-2"><span class="fa fa-facebook"
